# demoparser

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.rst  demopacket.html  events.html  game_events.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user_messages.html
_modules/: index.html
_modules/demoparser/: bytebuffer.html  fields.html  structures.html
_sources/: demopacket.rst.txt  events.rst.txt
_sources/api/: demoparser.entities.rst.txt
api/: demoparser.entities.html  demoparser.html  modules.html
demoparser/: _setup_hooks.py  bitbuffer.pxd  bitbuffer.pyx  bytebuffer.py  consts.py  demofile.py  demofile.pyx  fields.py  parser.pyx  props.pxd  props.pyx  structures.py  util.pxd  util.pyx
demoparser/entities/: __init__.py  base.py  entity_list.py  game_rules.py  player.py  team.py  weapon.py
demoparser/examples/: chat.py  player_death.py
demoparser/protobufs/: base_gcmessages.proto  base_gcmessages_pb2.py  cstrike15_gcmessages.proto  cstrike15_gcmessages_pb2.py  cstrike15_usermessages.proto  cstrike15_usermessages_pb2.py  econ_gcmessages.proto  econ_gcmessages_pb2.py  engine_gcmessages_pb2.py  fatdemo.proto  fatdemo_pb2.py  gcsdk_gcmessages.proto  gcsdk_gcmessages_pb2.py  gcsystemmsgs_pb2.py  netmessages_pb2.py  network_connection_pb2.py  steamdatagram_messages_pb2.py  steammessages_pb2.py  uifontfile_format_pb2.py
doc/: Makefile  conf.py  index.rst
tests/: test_bitbuffer.py  test_bytebuffer.py  test_demofile.py
(+16 files in other folders)
