[metadata]
name = demoparser
author = Ryan Moe
author-email = ryan.moe@gmail.com
summary = CS:GO demo file parser.
description-file = README.rst
home-page = https://github.com/ibm-dev-incubator/cheeseshop
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    demoparser
